fix(slogan): correct spacing in title and adjust font size in styles

--- a/src/app/shared/organisms/slogan/slogan.scss
+++ b/src/app/shared/organisms/slogan/slogan.scss
@@ -77,7 +77,7 @@
       font-size: 2.5rem;
     }
     @include m.desktop-up {
-      font-size: 3rem;
+      font-size: 2.95rem;
     }
   }
   @keyframes slogan-slide-in {
@@ -119,7 +119,7 @@
   &__text {
     font-size: 1.15rem;
     font-weight: 900;
-    color: v.color('gray4');
+    color: rgb(42, 42, 42);
     line-height: 1.7;
     margin: 0;
 
